--- a/Crop_disease_detection.ipynb
+++ b/Crop_disease_detection.ipynb
@@ -82,23 +82,10 @@
         "!pip install keras_preprocessing\n"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "DQIWYPsnVoOS",
-        "outputId": "d5f2d76e-ea3d-4442-c636-d97219a7ea90"
+        "id": "DQIWYPsnVoOS"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Installing collected packages: keras_preprocessing\n",
-            "Successfully installed keras_preprocessing-1.1.2\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -120,21 +107,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "mj7yE6v562ns",
-        "outputId": "8b5ae662-ca30-4246-de4f-67a5930204ad"
+        "outputId": "589a2b9f-b17c-42ee-927b-aed389640681"
       },
       "outputs": [
         {
-          "metadata": {
-            "tags": null
-          },
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Mounted at /content/gdrive\n"
           ]
@@ -164,8 +148,80 @@
       "metadata": {
         "id": "cXvqtvaDNd9G"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Creating Dataframe"
+      ],
+      "metadata": {
+        "id": "_DvjDMRMFSqY"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "created a DataFrame to store the image paths and labels by manually constructing the DataFrame row by row, and using a script to loop through the directory structure and extract the information"
+      ],
+      "metadata": {
+        "id": "bP8AGNBJHFJ8"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import os\n",
+        "import pandas as pd\n",
+        "\n",
+        "# Define the path to the root directory of the Plant Village dataset\n",
+        "dataset_path = '/content/gdrive/MyDrive/crowdai'\n",
+        "\n",
+        "# Create a list to store the image paths and labels\n",
+        "data = []\n",
+        "\n",
+        "# Loop through the subdirectories of the dataset path\n",
+        "for subdir, dirs, files in os.walk(dataset_path):\n",
+        "    # Loop through the files in the subdirectory\n",
+        "    for file in files:\n",
+        "        # Check if the file is an image file\n",
+        "        if file.endswith('.jpg') or file.endswith('.png'):\n",
+        "            # Get the full path to the image file\n",
+        "            file_path = os.path.join(subdir, file)\n",
+        "            # Get the label for the image file by extracting the subdirectory name\n",
+        "            label = os.path.basename(subdir)\n",
+        "            # Add the image path and label to the list\n",
+        "            data.append([file_path, label])\n",
+        "\n",
+        "# Create a DataFrame from the list of data\n",
+        "df = pd.DataFrame(data, columns=['image_path', 'label'])\n",
+        "\n",
+        "# Show the first 5 rows of the DataFrame\n",
+        "print(df.head())\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "J6W6GlpIEfeF",
+        "outputId": "01f42b6a-57f9-4036-ec4e-cb1cd903eab1"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "                                          image_path label\n",
+            "0  /content/gdrive/MyDrive/crowdai/c_26/d4607fbf-...  c_26\n",
+            "1  /content/gdrive/MyDrive/crowdai/c_10/59d8a372-...  c_10\n",
+            "2  /content/gdrive/MyDrive/crowdai/c_10/b1565e81-...  c_10\n",
+            "3  /content/gdrive/MyDrive/crowdai/c_10/915745f2-...  c_10\n",
+            "4  /content/gdrive/MyDrive/crowdai/c_10/64150a14-...  c_10\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -203,9 +259,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wpcM_KKvN28d",
-        "outputId": "a56db266-ce08-4fa7-9f92-8edbcd544f0e"
+        "outputId": "8dd3a7c7-ca0c-44c1-bb78-1dcdd4dfdcc5"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -249,9 +305,9 @@
           "height": 295
         },
         "id": "Lid0s4qaPRxA",
-        "outputId": "f384df87-d759-45dd-ca48-2d12be37794b"
+        "outputId": "25e93551-51ad-4a4e-d7d8-6c4734e0dbf3"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "display_data",
@@ -266,6 +322,33 @@
           }
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Preprocessing data"
+      ],
+      "metadata": {
+        "id": "kD9-_O0k8-kD"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "After checking the distribution of labels in the dataset, the next step is to pre-process the data for use in machine learning model. This typically involves the following steps:"
+      ],
+      "metadata": {
+        "id": "YKWwe_RB-r1W"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "1. Splitting the data into training and validation sets: use the train_test_split function from the scikit-learn library to split data into training and validation sets. This allos to evaluate model's performance on a validation set, which is unseen data."
+      ],
+      "metadata": {
+        "id": "9ImnjGrb-9Q8"
+      }
     }
   ],
   "metadata": {
