--- a/Crop_disease_detection.ipynb
+++ b/Crop_disease_detection.ipynb
@@ -82,10 +82,68 @@
         "!pip install keras_preprocessing\n"
       ],
       "metadata": {
-        "id": "DQIWYPsnVoOS"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "DQIWYPsnVoOS",
+        "outputId": "78f58232-0c86-4b7e-949c-9a112d96dff6"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
+            "Requirement already satisfied: gdown in /usr/local/lib/python3.8/dist-packages (4.4.0)\n",
+            "Requirement already satisfied: six in /usr/local/lib/python3.8/dist-packages (from gdown) (1.15.0)\n",
+            "Requirement already satisfied: requests[socks] in /usr/local/lib/python3.8/dist-packages (from gdown) (2.25.1)\n",
+            "Requirement already satisfied: tqdm in /usr/local/lib/python3.8/dist-packages (from gdown) (4.64.1)\n",
+            "Requirement already satisfied: filelock in /usr/local/lib/python3.8/dist-packages (from gdown) (3.9.0)\n",
+            "Requirement already satisfied: beautifulsoup4 in /usr/local/lib/python3.8/dist-packages (from gdown) (4.6.3)\n",
+            "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /usr/local/lib/python3.8/dist-packages (from requests[socks]->gdown) (1.24.3)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.8/dist-packages (from requests[socks]->gdown) (2022.12.7)\n",
+            "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.8/dist-packages (from requests[socks]->gdown) (2.10)\n",
+            "Requirement already satisfied: chardet<5,>=3.0.2 in /usr/local/lib/python3.8/dist-packages (from requests[socks]->gdown) (4.0.0)\n",
+            "Requirement already satisfied: PySocks!=1.5.7,>=1.5.6 in /usr/local/lib/python3.8/dist-packages (from requests[socks]->gdown) (1.7.1)\n",
+            "Get:1 https://cloud.r-project.org/bin/linux/ubuntu focal-cran40/ InRelease [3,622 B]\n",
+            "Get:2 http://security.ubuntu.com/ubuntu focal-security InRelease [114 kB]\n",
+            "Ign:3 https://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu2004/x86_64  InRelease\n",
+            "Hit:4 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2004/x86_64  InRelease\n",
+            "Hit:5 https://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu2004/x86_64  Release\n",
+            "Hit:6 http://archive.ubuntu.com/ubuntu focal InRelease\n",
+            "Get:7 http://ppa.launchpad.net/c2d4u.team/c2d4u4.0+/ubuntu focal InRelease [18.1 kB]\n",
+            "Get:8 http://archive.ubuntu.com/ubuntu focal-updates InRelease [114 kB]\n",
+            "Hit:9 http://ppa.launchpad.net/cran/libgit2/ubuntu focal InRelease\n",
+            "Hit:10 http://ppa.launchpad.net/deadsnakes/ppa/ubuntu focal InRelease\n",
+            "Get:11 http://archive.ubuntu.com/ubuntu focal-backports InRelease [108 kB]\n",
+            "Get:12 http://ppa.launchpad.net/graphics-drivers/ppa/ubuntu focal InRelease [24.3 kB]\n",
+            "Hit:13 http://ppa.launchpad.net/ubuntugis/ppa/ubuntu focal InRelease\n",
+            "Get:15 http://ppa.launchpad.net/c2d4u.team/c2d4u4.0+/ubuntu focal/main Sources [2,386 kB]\n",
+            "Get:16 http://security.ubuntu.com/ubuntu focal-security/universe amd64 Packages [995 kB]\n",
+            "Get:17 http://security.ubuntu.com/ubuntu focal-security/main amd64 Packages [2,480 kB]\n",
+            "Get:18 http://ppa.launchpad.net/c2d4u.team/c2d4u4.0+/ubuntu focal/main amd64 Packages [1,131 kB]\n",
+            "Get:19 http://archive.ubuntu.com/ubuntu focal-updates/restricted amd64 Packages [2,062 kB]\n",
+            "Get:20 http://archive.ubuntu.com/ubuntu focal-updates/universe amd64 Packages [1,296 kB]\n",
+            "Get:21 http://archive.ubuntu.com/ubuntu focal-updates/main amd64 Packages [2,966 kB]\n",
+            "Get:22 http://ppa.launchpad.net/graphics-drivers/ppa/ubuntu focal/main amd64 Packages [42.8 kB]\n",
+            "Fetched 13.7 MB in 6s (2,208 kB/s)\n",
+            "Reading package lists... Done\n",
+            "Reading package lists... Done\n",
+            "Building dependency tree       \n",
+            "Reading state information... Done\n",
+            "E: Unable to locate package fil\n",
+            "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
+            "Collecting keras_preprocessing\n",
+            "  Downloading Keras_Preprocessing-1.1.2-py2.py3-none-any.whl (42 kB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m42.6/42.6 KB\u001b[0m \u001b[31m3.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hRequirement already satisfied: six>=1.9.0 in /usr/local/lib/python3.8/dist-packages (from keras_preprocessing) (1.15.0)\n",
+            "Requirement already satisfied: numpy>=1.9.1 in /usr/local/lib/python3.8/dist-packages (from keras_preprocessing) (1.21.6)\n",
+            "Installing collected packages: keras_preprocessing\n",
+            "Successfully installed keras_preprocessing-1.1.2\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -107,13 +165,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "mj7yE6v562ns",
-        "outputId": "589a2b9f-b17c-42ee-927b-aed389640681"
+        "outputId": "81884298-3795-4755-eff1-109e96eb951d"
       },
       "outputs": [
         {
@@ -148,7 +206,7 @@
       "metadata": {
         "id": "cXvqtvaDNd9G"
       },
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -205,7 +263,62 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "J6W6GlpIEfeF",
-        "outputId": "01f42b6a-57f9-4036-ec4e-cb1cd903eab1"
+        "outputId": "b9a4c2f3-35b2-42e5-df0f-f1fadbb5bdf3"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "                                          image_path label\n",
+            "0  /content/gdrive/MyDrive/crowdai/c_4/21ad2360-4...   c_4\n",
+            "1  /content/gdrive/MyDrive/crowdai/c_4/587d9e51-8...   c_4\n",
+            "2  /content/gdrive/MyDrive/crowdai/c_4/c3516034-3...   c_4\n",
+            "3  /content/gdrive/MyDrive/crowdai/c_4/11dc114c-5...   c_4\n",
+            "4  /content/gdrive/MyDrive/crowdai/c_4/b15f23b2-4...   c_4\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Counting Total number of images "
+      ],
+      "metadata": {
+        "id": "CjIFyBKHMWs6"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import os\n",
+        "\n",
+        "# Define the path to the root directory of the Plant Village dataset\n",
+        "dataset_path = '/content/gdrive/MyDrive/crowdai'\n",
+        "\n",
+        "# Initialize a count of the number of images\n",
+        "count = 0\n",
+        "\n",
+        "# Loop through the subdirectories of the dataset path\n",
+        "for subdir, dirs, files in os.walk(dataset_path):\n",
+        "    # Loop through the files in the subdirectory\n",
+        "    for file in files:\n",
+        "        # Check if the file is an image file with a .jpg or .png extension\n",
+        "        if file.endswith('.jpg') or file.endswith('.png'):\n",
+        "            # Increment the count of images\n",
+        "            count += 1\n",
+        "\n",
+        "# Print the count of images\n",
+        "print('Number of images:', count)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wkXhrDRcQ_TY",
+        "outputId": "7e22eb11-c17a-4244-cce0-5a9417549ad8"
       },
       "execution_count": 9,
       "outputs": [
@@ -213,12 +326,68 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "                                          image_path label\n",
-            "0  /content/gdrive/MyDrive/crowdai/c_26/d4607fbf-...  c_26\n",
-            "1  /content/gdrive/MyDrive/crowdai/c_10/59d8a372-...  c_10\n",
-            "2  /content/gdrive/MyDrive/crowdai/c_10/b1565e81-...  c_10\n",
-            "3  /content/gdrive/MyDrive/crowdai/c_10/915745f2-...  c_10\n",
-            "4  /content/gdrive/MyDrive/crowdai/c_10/64150a14-...  c_10\n"
+            "Number of images: 24842\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Total number of 'png' images"
+      ],
+      "metadata": {
+        "id": "p-b5l4ZNR-3L"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from PIL import Image\n",
+        "import os\n",
+        "\n",
+        "# Define the path to the root directory of the Plant Village dataset\n",
+        "dataset_path = '/content/gdrive/MyDrive/crowdai'\n",
+        "\n",
+        "# Initialize a count of the number of images\n",
+        "count = 0\n",
+        "\n",
+        "# Loop through the subdirectories of the dataset path\n",
+        "for subdir, dirs, files in os.walk(dataset_path):\n",
+        "    # Loop through the files in the subdirectory\n",
+        "    for file in files:\n",
+        "        # Check if the file is not already a .png file\n",
+        "        if not file.endswith('.png'):\n",
+        "            # Open the image file\n",
+        "            img = Image.open(os.path.join(subdir, file))\n",
+        "            # Convert the image to .png format\n",
+        "            img = img.convert('RGB')\n",
+        "            # Save the converted image with a .png extension\n",
+        "            new_file_name = os.path.splitext(file)[0] + '.png'\n",
+        "            img.save(os.path.join(subdir, new_file_name))\n",
+        "        # Check if the file is a .png file\n",
+        "        if file.endswith('.png'):\n",
+        "            # Increment the count of images\n",
+        "            count += 1\n",
+        "\n",
+        "# Print the count of images\n",
+        "print('Number of images:', count)\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "IuLyABXmKw7t",
+        "outputId": "690f38d8-97f7-4671-e283-18b583a9ae6b"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Number of images: 21917\n"
           ]
         }
       ]
@@ -259,16 +428,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wpcM_KKvN28d",
-        "outputId": "8dd3a7c7-ca0c-44c1-bb78-1dcdd4dfdcc5"
+        "outputId": "9f82c5d7-5196-4384-adbd-7b51a6a71020"
       },
-      "execution_count": 5,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Downloading data from https://www.cs.toronto.edu/~kriz/cifar-10-python.tar.gz\n",
-            "170498071/170498071 [==============================] - 2s 0us/step\n"
+            "170498071/170498071 [==============================] - 14s 0us/step\n"
           ]
         }
       ]
@@ -305,9 +474,9 @@
           "height": 295
         },
         "id": "Lid0s4qaPRxA",
-        "outputId": "25e93551-51ad-4a4e-d7d8-6c4734e0dbf3"
+        "outputId": "b2ea43f8-46be-41fe-c07c-b2fd2a63b3a5"
       },
-      "execution_count": 6,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "display_data",
