--- a/Crop_disease_detection.ipynb
+++ b/Crop_disease_detection.ipynb
@@ -86,9 +86,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "DQIWYPsnVoOS",
-        "outputId": "97c48dfb-fba5-43e9-f888-b6edfa0b97f6"
+        "outputId": "1efa3016-5b28-4abb-c06e-6e51344939ac"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -96,38 +96,37 @@
           "text": [
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Requirement already satisfied: gdown in /usr/local/lib/python3.8/dist-packages (4.4.0)\n",
-            "Requirement already satisfied: filelock in /usr/local/lib/python3.8/dist-packages (from gdown) (3.9.0)\n",
-            "Requirement already satisfied: tqdm in /usr/local/lib/python3.8/dist-packages (from gdown) (4.64.1)\n",
-            "Requirement already satisfied: requests[socks] in /usr/local/lib/python3.8/dist-packages (from gdown) (2.25.1)\n",
             "Requirement already satisfied: six in /usr/local/lib/python3.8/dist-packages (from gdown) (1.15.0)\n",
+            "Requirement already satisfied: filelock in /usr/local/lib/python3.8/dist-packages (from gdown) (3.9.0)\n",
+            "Requirement already satisfied: requests[socks] in /usr/local/lib/python3.8/dist-packages (from gdown) (2.25.1)\n",
             "Requirement already satisfied: beautifulsoup4 in /usr/local/lib/python3.8/dist-packages (from gdown) (4.6.3)\n",
+            "Requirement already satisfied: tqdm in /usr/local/lib/python3.8/dist-packages (from gdown) (4.64.1)\n",
             "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.8/dist-packages (from requests[socks]->gdown) (2022.12.7)\n",
             "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.8/dist-packages (from requests[socks]->gdown) (2.10)\n",
             "Requirement already satisfied: chardet<5,>=3.0.2 in /usr/local/lib/python3.8/dist-packages (from requests[socks]->gdown) (4.0.0)\n",
             "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /usr/local/lib/python3.8/dist-packages (from requests[socks]->gdown) (1.24.3)\n",
             "Requirement already satisfied: PySocks!=1.5.7,>=1.5.6 in /usr/local/lib/python3.8/dist-packages (from requests[socks]->gdown) (1.7.1)\n",
-            "Get:1 https://cloud.r-project.org/bin/linux/ubuntu focal-cran40/ InRelease [3,622 B]\n",
-            "Hit:2 http://archive.ubuntu.com/ubuntu focal InRelease\n",
-            "Get:3 http://security.ubuntu.com/ubuntu focal-security InRelease [114 kB]\n",
-            "Ign:4 https://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu2004/x86_64  InRelease\n",
-            "Hit:5 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2004/x86_64  InRelease\n",
-            "Hit:6 https://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu2004/x86_64  Release\n",
-            "Get:7 http://ppa.launchpad.net/c2d4u.team/c2d4u4.0+/ubuntu focal InRelease [18.1 kB]\n",
-            "Get:8 http://archive.ubuntu.com/ubuntu focal-updates InRelease [114 kB]\n",
+            "Get:1 http://security.ubuntu.com/ubuntu focal-security InRelease [114 kB]\n",
+            "Get:2 https://cloud.r-project.org/bin/linux/ubuntu focal-cran40/ InRelease [3,622 B]\n",
+            "Hit:3 http://archive.ubuntu.com/ubuntu focal InRelease\n",
+            "Get:4 http://archive.ubuntu.com/ubuntu focal-updates InRelease [114 kB]\n",
+            "Get:5 http://ppa.launchpad.net/c2d4u.team/c2d4u4.0+/ubuntu focal InRelease [18.1 kB]\n",
+            "Get:6 http://archive.ubuntu.com/ubuntu focal-backports InRelease [108 kB]\n",
+            "Ign:7 https://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu2004/x86_64  InRelease\n",
+            "Hit:8 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2004/x86_64  InRelease\n",
+            "Hit:9 https://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu2004/x86_64  Release\n",
             "Hit:10 http://ppa.launchpad.net/cran/libgit2/ubuntu focal InRelease\n",
-            "Get:11 http://security.ubuntu.com/ubuntu focal-security/main amd64 Packages [2,480 kB]\n",
-            "Get:12 http://archive.ubuntu.com/ubuntu focal-backports InRelease [108 kB]\n",
-            "Hit:13 http://ppa.launchpad.net/deadsnakes/ppa/ubuntu focal InRelease\n",
-            "Get:14 http://archive.ubuntu.com/ubuntu focal-updates/main amd64 Packages [2,966 kB]\n",
-            "Get:15 http://ppa.launchpad.net/graphics-drivers/ppa/ubuntu focal InRelease [24.3 kB]\n",
-            "Get:16 http://security.ubuntu.com/ubuntu focal-security/universe amd64 Packages [995 kB]\n",
-            "Get:17 http://archive.ubuntu.com/ubuntu focal-updates/universe amd64 Packages [1,296 kB]\n",
-            "Get:18 http://archive.ubuntu.com/ubuntu focal-updates/restricted amd64 Packages [2,062 kB]\n",
-            "Hit:19 http://ppa.launchpad.net/ubuntugis/ppa/ubuntu focal InRelease\n",
-            "Get:20 http://ppa.launchpad.net/c2d4u.team/c2d4u4.0+/ubuntu focal/main Sources [2,386 kB]\n",
-            "Get:21 http://ppa.launchpad.net/c2d4u.team/c2d4u4.0+/ubuntu focal/main amd64 Packages [1,131 kB]\n",
-            "Get:22 http://ppa.launchpad.net/graphics-drivers/ppa/ubuntu focal/main amd64 Packages [42.8 kB]\n",
-            "Fetched 13.7 MB in 7s (1,900 kB/s)\n",
+            "Hit:11 http://ppa.launchpad.net/deadsnakes/ppa/ubuntu focal InRelease\n",
+            "Get:12 https://cloud.r-project.org/bin/linux/ubuntu focal-cran40/ Packages [71.6 kB]\n",
+            "Hit:13 http://ppa.launchpad.net/graphics-drivers/ppa/ubuntu focal InRelease\n",
+            "Get:14 http://security.ubuntu.com/ubuntu focal-security/universe amd64 Packages [998 kB]\n",
+            "Hit:15 http://ppa.launchpad.net/ubuntugis/ppa/ubuntu focal InRelease\n",
+            "Get:16 http://security.ubuntu.com/ubuntu focal-security/main amd64 Packages [2,496 kB]\n",
+            "Get:17 http://archive.ubuntu.com/ubuntu focal-updates/main amd64 Packages [2,970 kB]\n",
+            "Get:18 http://archive.ubuntu.com/ubuntu focal-updates/universe amd64 Packages [1,297 kB]\n",
+            "Get:19 http://ppa.launchpad.net/c2d4u.team/c2d4u4.0+/ubuntu focal/main Sources [2,391 kB]\n",
+            "Get:21 http://ppa.launchpad.net/c2d4u.team/c2d4u4.0+/ubuntu focal/main amd64 Packages [1,133 kB]\n",
+            "Fetched 11.7 MB in 4s (2,714 kB/s)\n",
             "Reading package lists... Done\n",
             "Reading package lists... Done\n",
             "Building dependency tree       \n",
@@ -136,7 +135,7 @@
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Collecting keras_preprocessing\n",
             "  Downloading Keras_Preprocessing-1.1.2-py2.py3-none-any.whl (42 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m42.6/42.6 KB\u001b[0m \u001b[31m2.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m42.6/42.6 KB\u001b[0m \u001b[31m3.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hRequirement already satisfied: six>=1.9.0 in /usr/local/lib/python3.8/dist-packages (from keras_preprocessing) (1.15.0)\n",
             "Requirement already satisfied: numpy>=1.9.1 in /usr/local/lib/python3.8/dist-packages (from keras_preprocessing) (1.21.6)\n",
             "Installing collected packages: keras_preprocessing\n",
@@ -165,13 +164,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "mj7yE6v562ns",
-        "outputId": "0b1655fa-6f55-46a4-b1b7-8985f96377e2"
+        "outputId": "b76eca76-fce3-4f2d-e11e-1c7af6c5eb0f"
       },
       "outputs": [
         {
@@ -206,7 +205,7 @@
       "metadata": {
         "id": "cXvqtvaDNd9G"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -263,9 +262,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "J6W6GlpIEfeF",
-        "outputId": "45d8cf26-b7e3-4034-83c8-2a0e3f82f939"
+        "outputId": "f14f4c01-fe7d-456b-c26b-513d654193d2"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -318,76 +317,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wkXhrDRcQ_TY",
-        "outputId": "d21345d6-6d85-4f33-9896-a75e8e214bcb"
+        "outputId": "4b8971c3-9afe-4737-c244-892dd7f88d71"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Number of images: 24842\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Total number of 'png' images"
-      ],
-      "metadata": {
-        "id": "p-b5l4ZNR-3L"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "from PIL import Image\n",
-        "import os\n",
-        "\n",
-        "# Define the path to the root directory of the Plant Village dataset\n",
-        "dataset_path = '/content/gdrive/MyDrive/crowdai'\n",
-        "\n",
-        "# Initialize a count of the number of images\n",
-        "count = 0\n",
-        "\n",
-        "# Loop through the subdirectories of the dataset path\n",
-        "for subdir, dirs, files in os.walk(dataset_path):\n",
-        "    # Loop through the files in the subdirectory\n",
-        "    for file in files:\n",
-        "        # Check if the file is not already a .png file\n",
-        "        if not file.endswith('.png'):\n",
-        "            # Open the image file\n",
-        "            img = Image.open(os.path.join(subdir, file))\n",
-        "            # Convert the image to .png format\n",
-        "            img = img.convert('RGB')\n",
-        "            # Save the converted image with a .png extension\n",
-        "            new_file_name = os.path.splitext(file)[0] + '.png'\n",
-        "            img.save(os.path.join(subdir, new_file_name))\n",
-        "        # Check if the file is a .png file\n",
-        "        if file.endswith('.png'):\n",
-        "            # Increment the count of images\n",
-        "            count += 1\n",
-        "\n",
-        "# Print the count of images\n",
-        "print('Number of images:', count)\n",
-        "\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "IuLyABXmKw7t",
-        "outputId": "995f064b-5a82-479d-8ae9-3b3c0ed17634"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Number of images: 21917\n"
           ]
         }
       ]
@@ -428,16 +366,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wpcM_KKvN28d",
-        "outputId": "f314e2e0-b1de-4c96-d83f-59fe9c0d9ca8"
+        "outputId": "a5a2e4ba-5435-4047-975d-f0dd4d772e8f"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Downloading data from https://www.cs.toronto.edu/~kriz/cifar-10-python.tar.gz\n",
-            "170498071/170498071 [==============================] - 11s 0us/step\n"
+            "170498071/170498071 [==============================] - 2s 0us/step\n"
           ]
         }
       ]
@@ -474,9 +412,9 @@
           "height": 295
         },
         "id": "Lid0s4qaPRxA",
-        "outputId": "3d198562-dc18-43b0-c192-f935327df5b3"
+        "outputId": "b21e1646-01cf-436a-f8fb-1fbdf824f885"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "display_data",
@@ -504,20 +442,119 @@
     {
       "cell_type": "markdown",
       "source": [
-        "After checking the distribution of labels in the dataset, the next step is to pre-process the data for use in machine learning model. This typically involves the following steps:"
-      ],
-      "metadata": {
-        "id": "YKWwe_RB-r1W"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
         "1. Splitting the data into training and validation sets: use the train_test_split function from the scikit-learn library to split data into training and validation sets. This allos to evaluate model's performance on a validation set, which is unseen data."
       ],
       "metadata": {
         "id": "9ImnjGrb-9Q8"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Total number of classes"
+      ],
+      "metadata": {
+        "id": "ELX0TISUN64A"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "To examine the labels/classes in the crowdia directory read the names of the subdirectories in the dataset directory. Each subdirectory corresponds to a different class or label in the dataset. Here is how i get the list of classes in the dataset"
+      ],
+      "metadata": {
+        "id": "BSJKLFzqRRqm"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import os\n",
+        "\n",
+        "# Set the directory path to the Plant Village dataset\n",
+        "data_dir = '/content/gdrive/MyDrive/crowdai'\n",
+        "\n",
+        "# Get the list of subdirectories in the dataset directory\n",
+        "classes = os.listdir(data_dir)\n",
+        "\n",
+        "# Get the total number of classes\n",
+        "num_classes = len(classes)\n",
+        "\n",
+        "# Print the total number of classes\n",
+        "print(f'The Plant Village dataset contains {num_classes} classes')\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UIIhHWN0ObGy",
+        "outputId": "dbdcd533-7223-4b6e-e08f-33659139a776"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The Plant Village dataset contains 38 classes\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
+        "\n",
+        "\n",
+        "augment = ImageDataGenerator(rotation_range=25, width_shift_range=0.1,\n",
+        "                             height_shift_range=0.1, shear_range=0.2, \n",
+        "                             zoom_range=0.2, horizontal_flip=True, \n",
+        "                             fill_mode=\"nearest\")"
+      ],
+      "metadata": {
+        "id": "CZIffdbtTnqX"
+      },
+      "execution_count": 23,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"[INFO] Splitting data to train and test...\")\n",
+        "x_train, x_test, y_train, y_test = train_test_split(np_image_list, image_labels, test_size=0.2, random_state = 42)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 198
+        },
+        "id": "hB3CPKzaUfa-",
+        "outputId": "51fd03ee-1c4b-402b-9ad6-a77f73fcdb79"
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[INFO] Splitting data to train and test...\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-24-0f9fb468bf78>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"[INFO] Splitting data to train and test...\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mx_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_test\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrain_test_split\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp_image_list\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mimage_labels\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest_size\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrandom_state\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m42\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'image_labels' is not defined"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
